external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/named_struct_middle_autocomplete.ide.exp
error[E03010]: unbound field
   ┌─ tests/move_2024/ide_mode/named_struct_middle_autocomplete.move:13:21
   │
13 │         let _tmp2 = _s.b.x;
   │                     ^^^^ Unbound field 'b' in 'a::m::B'

note[I15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/named_struct_middle_autocomplete.move:13:24
   │
13 │         let _tmp2 = _s.b.x;
   │                        ^ Autocompletes to: 'a'

